--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <!--CTA-->
 
-    <div id="cta" class="cta d-flex align-items-center">
+    <div id="cta" class="cta d-flex align-items-center text-light">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -254,7 +254,7 @@
 <section id="faq">
         <div class="container">
             <div class="faq-section">
-              <h2 class="text-center mb-lg-5 mb-3 text-light">Frequently Asked Questions</h2>
+              <h2 class="text-center mb-lg-5 mb-3 text-dark">Frequently Asked Questions</h2>
               <div class="accordion" id="faqAccordion">
                 <div class="accordion-item faq-item">
                   <h2 class="accordion-header">
